--- a/backup/custom.html
+++ b/backup/custom.html
@@ -129,3 +129,21 @@
   <p>Working with Swazei is always an absolute joy, both personally and professionally. The team is immensely talented and professional</p>
   <p>- Emmy Barton, Geegr</p>
 </div>
+
+<div class="verticle-2-icon">
+  <div class="top-icon">
+
+  </div>
+  <div class="bottom-icon">
+
+  </div>
+</div>
+<div class="service-page-text">
+  <p>Custom Digital Transformation Solutions for Your Business</p>
+</div>
+
+<div class="portfolio-card-div">
+  <div>
+    <object></object>
+  </div>
+</div>
